# Ats-Resume-Scanner

./: README.md  ai_chatbot.py  app.py  ats_analyzer.py  pyproject.toml  report_generator.py  resume_parser.py  utils.py
